apex/objects/Data_Quality_Snapshot__c/Data_Quality_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Data Quality Snapshot</label>
    <pluralLabel>Data Quality Snapshots</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Snapshot Number</label>
        <displayFormat>DQS-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>One record per scorecard run. Written only by DataQualityScorecardService - never edited by hand.</description>
</CustomObject>