apex/objects/Data_Quality_Snapshot__c/fields/Address_Completeness_Percent__c.field-meta.xml
<CustomField>
    <fullName>Address_Completeness_Percent__c</fullName>
    <label>Address Completeness %</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
    <description>Percent of Contacts/Households with a complete mailing address (street, city, state, postal code, country all populated). Higher is better.</description>
</CustomField>