apex/objects/Data_Quality_Snapshot__c/fields/Channel_Preference_Coverage_Percent__c.field-meta.xml
<CustomField>
    <fullName>Channel_Preference_Coverage_Percent__c</fullName>
    <label>Channel Preference Coverage %</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
    <description>Percent of Contacts with an explicit communication/channel preference on file (not blank/default). Higher is better.</description>
</CustomField>