apex/objects/Data_Quality_Snapshot__c/fields/Currency_Anomalies_Count__c.field-meta.xml
<CustomField>
    <fullName>Currency_Anomalies_Count__c</fullName>
    <label>Currency Anomalies Count</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <description>Count of gift records with a negative amount, a zero amount on a Closed Won stage, or a currency code that doesn't match the org's active currencies. Lower is better.</description>
</CustomField>