apex/objects/Data_Quality_Snapshot__c/fields/Data_Model_Detected__c.field-meta.xml
<CustomField>
    <fullName>Data_Model_Detected__c</fullName>
    <label>Data Model Detected</label>
    <type>Text</type>
    <length>40</length>
    <description>Which fundraising data model this run detected and scored against: NPSP, Nonprofit Cloud, or Mixed. See DataQualityMetrics.detectDataModel().</description>
</CustomField>