apex/objects/Data_Quality_Snapshot__c/fields/Duplicate_Rate__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Rate__c</fullName>
    <label>Duplicate Rate</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
    <description>Percent of Contacts/Accounts flagged as likely duplicates by matching rule. Higher is worse.</description>
</CustomField>