apex/objects/Data_Quality_Snapshot__c/fields/Missing_Gau_Allocations_Count__c.field-meta.xml
<CustomField>
    <fullName>Missing_Gau_Allocations_Count__c</fullName>
    <label>Missing GAU Allocations Count</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <description>Count of closed-won gifts with no General Accounting Unit allocation record. Lower is better.</description>
</CustomField>