apex/objects/Data_Quality_Snapshot__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <type>LongTextArea</type>
    <length>2000</length>
    <description>Optional free-text note an admin can add after reviewing a run - not written by the batch job.</description>
</CustomField>