apex/objects/Data_Quality_Snapshot__c/fields/Orphan_Gifts_Count__c.field-meta.xml
<CustomField>
    <fullName>Orphan_Gifts_Count__c</fullName>
    <label>Orphan Gifts Count</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <description>Count of gift records (Opportunity+npsp__Payment__c, or GiftTransaction) with no linked donor/account. Lower is better.</description>
</CustomField>