apex/objects/Data_Quality_Snapshot__c/fields/Required_Field_Null_Rate_Percent__c.field-meta.xml
<CustomField>
    <fullName>Required_Field_Null_Rate_Percent__c</fullName>
    <label>Required Field Null Rate %</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
    <description>Percent of donor records missing at least one field this org's admin has flagged as required in Data_Quality_Config__mdt. Lower is better.</description>
</CustomField>