apex/objects/Data_Quality_Snapshot__c/fields/Run_Date__c.field-meta.xml
<CustomField>
    <fullName>Run_Date__c</fullName>
    <label>Run Date</label>
    <type>DateTime</type>
    <description>When this snapshot's batch job completed. Set by DataQualityScorecardBatch.finish(), never hand-edited.</description>
</CustomField>