apex/objects/Data_Quality_Snapshot__c/fields/Stale_Contact_Threshold_Months_Used__c.field-meta.xml
<CustomField>
    <fullName>Stale_Contact_Threshold_Months_Used__c</fullName>
    <label>Stale Contact Threshold (Months) Used</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <description>The Stale_Contact_Threshold_Months__c value read from Data_Quality_Config__mdt at the time this run executed. Recorded per-snapshot so trend charts stay honest if the threshold is changed later.</description>
</CustomField>