apex/objects/Data_Quality_Snapshot__c/fields/Stale_Contacts_Percent__c.field-meta.xml
<CustomField>
    <fullName>Stale_Contacts_Percent__c</fullName>
    <label>Stale Contacts %</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
    <description>Percent of Contacts with no logged Activity/Task and no Opportunity/GiftTransaction touch within the configured stale-contact window (see Data_Quality_Config__mdt). Lower is better.</description>
</CustomField>