apex/objects/Data_Quality_Snapshot__c/fields/Unlinked_Soft_Credits_Count__c.field-meta.xml
<CustomField>
    <fullName>Unlinked_Soft_Credits_Count__c</fullName>
    <label>Unlinked Soft Credits Count</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <description>Count of soft credit records pointing at a Contact Id that no longer resolves to a real Contact. Lower is better.</description>
</CustomField>