apex/objects/Data_Quality_Snapshot__c/fields/Valid_Email_Percent__c.field-meta.xml
<CustomField>
    <fullName>Valid_Email_Percent__c</fullName>
    <label>Valid Email %</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
    <description>Percent of Contacts with an Email value that passes basic format validation. Higher is better.</description>
</CustomField>